// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Paragraph Defaults smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph IsPElement smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph VariantIngress smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_ingress__aR0kV  ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_ingress__aR0kV  ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph VariantIngressWithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_ingress__aR0kV Paragraph_paragraph_hasSpacingExtraLarge__22DjR ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_ingress__aR0kV Paragraph_paragraph_hasSpacingExtraLarge__22DjR ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithCustomCss smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  dummyClassname">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithDataTestid smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  "
     data-testid="ParagraphID"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithId smoke-test 1`] = `
<div data-test-block="true">
  <p id="ParagraphId"
     class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  "
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithLang smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  "
     lang="nb"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  ">
    <span>
      Tekstavsnitt som kan inneholde en lengre tekst. Husk å følge klarspråkprinsippene når en skriver tekster. I dette tilfellet skriver bare litt ekstra tekst for å få litt
      <strong>
        innhold
      </strong>
      , men
      <em>
        normalt
      </em>
      vil en ønske å skrive så konsentret som mulig. Mange brukere leser bare de første ordene i en tekst, eller hopper ganske enkelt over den. Dette er en
      <a href="https://www.yr.no/nb/v%C3%A6rvarsel/daglig-tabell/2-460499/Latvia/Bauskas%20Rajons/Codes%20pagasts/Code">
        lenke
      </a>
      for å sjekke været i
      <code>
        Code
      </code>
      som er en
      <small>
        small
      </small>
      landsby i et land med mange
      <mark>
        mark
      </mark>
      og et språk uten
      <b>
        b
      </b>
      eller
      <i>
        i
      </i>
      .
    </span>
  </p>
</div>
`;

exports[`Tester/Paragraph WithRef smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw  "
     id="dummyIdForwardedFromRef"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw Paragraph_paragraph_hasSpacingLarge__18xTK ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="Paragraph_paragraph__3DdMb Paragraph_paragraph_standard__1SXYw Paragraph_paragraph_hasSpacingLarge__18xTK ">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;
